[tool.poetry]
name = "aldangold-page-loader"
version = "0.1.0"
description = ""
authors = ["aldangold <meloshnikoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest-cov = "^2.10.0"
wemake-python-styleguide = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
